# isucon7-retry-rust

webapp/rust/: Cargo.toml
webapp/rust/src/: main.rs
webapp/rust/template/: add_channel.html.tera  header.html.tera  profile.html  register.html
webapp/rust/views/: add_channel.html  channel.html  footer.html  header.html  history.html  index.html  login.html
