[package]
name = "rust"
version = "0.1.0"
authors = ["pokotsun <gorigolila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-rt = "1.0.0"    
actix-web = "2.0.0"                                                                                                                                                                                                                           
actix-files = "0.2.1"    
actix-session = "0.3.0"    
actix-utils = "1.0.3"    
    
futures = "0.3.1"    
env_logger = "0.7"    
bytes = "0.5"

serde = { version = "1.0", features = [ "derive"] }
serde_json="1.0"
sqlx = { version = "0.3", features = [ "mysql", "chrono" ] }
tera = "1.0"
chrono = {version = "0.4", features = ["serde"] }
